--- a/model/Model Specification.html
+++ b/model/Model Specification.html
@@ -822,7 +822,7 @@
 
         <h4>10.1.1 Recommended load order (non-normative)</h4>
         <div class="box small">
-          <span class="code-inline">PMS.yaml</span> → <span class="code-inline">PMS-CRITIQUE.yaml</span> → <span class="code-inline">pms-critique-ext.yaml</span> (optional)
+          <span class="code-inline">PMS.yaml</span> → <span class="code-inline">PMS-CRITIQUE.yaml</span>
         </div>
 
         <h4>10.1.2 What an agent/tool can do with PMS-CRITIQUE (beyond PMS alone)</h4>
